change design add new pages add v13 system

--- a/src/pages/zaluzje-panelowe.html
+++ b/src/pages/zaluzje-panelowe.html
@@ -6,8 +6,8 @@
     <title>Shadowplace</title>
     <meta name="description" content="Your project description" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="../scss/normalize.css">
-  
+    <!-- <link rel="stylesheet" href="../../dist/index.ffd7c6d9.css"> -->
+    
   </head>
   <body> 
     <div class="wrapper">
@@ -75,7 +75,7 @@
         </div>  
         <div class="main-wrap">
 
-          <h1 class="main-title">żaluzje poziome<i class="fas fa-ellipsis-v">rolety</i></h1>
+          <h1 class="main-title">żaluzje poziome  <i class="fas fa-ellipsis-v"></i></h1>
         </div>
         
         <!-------------------------article-flex-------------------->
