new email send php

--- a/src/pages/karnisze.html
+++ b/src/pages/karnisze.html
@@ -501,7 +501,7 @@
           </div>
 
           
-      <div class="category-right__main--wrap category-special">
+      <div class="category-right__main--wrap category-special2">
                 <!-- -------------system-ręczny--------------------- -->
           <article class="category-right__main">
             <div class="category-div__main">
