--- a/src/pages/markizy.html
+++ b/src/pages/markizy.html
@@ -499,7 +499,7 @@
           </div>
 
           
-      <div class="category-right__main--wrap category-special">
+      <div class="category-right__main--wrap category-special2">
                 <!-- ------------tarasowe--------------------- -->
           <article class="category-right__main">
             <div class="category-div__main">
