--- a/src/pages/smart-home.html
+++ b/src/pages/smart-home.html
@@ -496,7 +496,7 @@
           </div>
 
           
-      <div class="category-right__main--wrap category-special">
+      <div class="category-right__main--wrap category-special3">
             <!-- -------------sytem torro-plato--------------------- -->
           <article class="category-right__main">
             <div class="category-div__main">
