--- a/src/pages/kontakt-wyslane.html
+++ b/src/pages/kontakt-wyslane.html
@@ -8,7 +8,7 @@
                         <meta name="description" content="Your project description" />
                         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
                         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;400;700&display=swap" rel="stylesheet">
-                        
+                        <link rel="stylesheet" href="index.ae05a17e.css">
                         
                       </head>
                       <body> 
