--- a/src/pages/maty-drewniano-bambusowe.html
+++ b/src/pages/maty-drewniano-bambusowe.html
@@ -507,7 +507,7 @@
           </div>
 
           
-      <div class="category-right__main--wrap category-special">
+      <div class="category-right__main--wrap category-special2">
                <!-- -------------System Rollowany------------------- -->
           <article class="category-right__main">
             <div class="category-div__main">
