--- a/src/pages/zaluzje-pionowe.html
+++ b/src/pages/zaluzje-pionowe.html
@@ -509,7 +509,7 @@
           </div>
 
           
-      <div class="category-right__main--wrap category-special">
+      <div class="category-right__main--wrap category-special2">
                 <!-- -------------żaluzje pionowe 89 mm--------------------- -->
           <article class="category-right__main">
             <div class="category-div__main">
